--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <figure class="logo">
-      <a href="index.html" alt="logo de Brugge"> <img class="logo-marca" src="./img/logo_horizontal.png" alt="logo de Brugee"> </a>
+      <a href="index.html" alt="logo de Brugge"> <img class="logo-marca" src="./img/logo_horizontal.png" alt="logo de Brugge"> </a>
     </figure>
     <!-------Link a Whatsapp con icono de carrito de compras----->
     <div id="carrito_de_compras"><a class="color-carrito" href="https://api.whatsapp.com/send/?phone=5491165896401&text&app_absent=0"
@@ -34,7 +34,7 @@
     </div>
   </header>
   <!-------Barra de navegación------------->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-personalizado">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,19 +67,16 @@
     <section class="titulo">
       <h1> Nosotros y nuestra historia</h1>
     </section>
-
-
-
     <section class="container mt-5 mb-5">
       <section class="row justify-content-center">
         <!-------Foto del equipo-------->
         <div class="col-12 col-sm-6">
           <figure class="foto">
-            <img class="foto-equipo" src="./img/el_equipo.jpg" alt="logo de Brugee">
+            <img class="foto-equipo" src="./img/el_equipo.jpg" alt="logo de Brugge">
           </figure>
         </div>
         <!--------La historia-------->
-        <article class="col-12 col-sm-6">
+        <article class="col-12 col-sm-6 texto-centrado">
           <p><strong>Brugge</strong> está conformado por 3 emprendedores, cuya misión es la producción de
             <strong>cerveza artesanal de una manera natural y sin aditivos</strong>.</p>
           <p>En el 2018, luego de 5 años de homebrew, decidimos convertir nuestro hobby en una forma de vida. Es así
@@ -134,7 +131,7 @@
     </section>
     <!----------Legal------------>
     <section class="legal">
-      <p class="texto-footer"> &#169 Maria Eugenia Costa - Programá Desde Tu Casa</p>
+      <p class="texto-footer"> &#169 2021 Todos los derechos reservados</p>
     </section>
 
   </footer>
