--- a/dondeestamos.html
+++ b/dondeestamos.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <!-------Barra de navegación------------->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-personalizado">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -296,7 +296,7 @@
     </section>
     <!----------Legal------------>    
     <section class="legal">
-      <p class="texto-footer"> &#169 Maria Eugenia Costa - Programá Desde Tu Casa</p>
+      <p class="texto-footer">  &#169 2021 Todos los derechos reservados </p>
     </section>
 
 
