--- a/nuestrosestilos.html
+++ b/nuestrosestilos.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <!-------Barra de navegación------------->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-personalizado">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -63,107 +63,107 @@
     <section id="#estilos">
       <section class="container mt-5 mb-5">
         <div class="row justify-content-center">
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!---Estilo Session IPA---->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">SESSION IPA</h2>
               </div>
-              <img class="cover cover-small " src="./img/SessionIPA.jpg" alt="imagen de un una botella de Cerveza Session IPA de Brugge">
-              <div class="card-body">
-                <p class="card-text">Cerveza donde el lúpulo es protagonista tanto en sabor como en aroma, tiene un moderado nivel de amargor acompañado por un bajo cuerpo y una baja maltosidad. Presenta notas a frutas tropicales y cítricas.</p>
-                <span class="badge bg-secondary">Color: dorado intenso <br> Amargor: bajo <br>ABV: 5%</span>
+              <div id="imagen-de-fondo-cerveza"></div>
+              <div class="card-body card-body-text">
+                <p class="card-text">Cerveza donde el lúpulo es protagonista en sabor y en aroma, tiene un moderado nivel de amargor acompañado por un bajo cuerpo y una baja maltosidad. Presenta notas a frutas tropicales y cítricas.</p>
+                <p class="card-text card-text-detalles">Color : dorado intenso <br> Amargor : bajo <br>ABV : 5%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!------Estilo Honey------>
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">HONEY</h2>
               </div>
-              <img class="cover cover-small" src="./img/honey.jpg" alt="imagen de un una botella y copa de Cerveza Honey de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-honey"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza ligera con agregado de miel de la flor de alfalfa durante la cocción que aporta dulzor y mayor graduación alcohólica.</p>
-                <span class="badge bg-secondary">Color: dorada intensa <br>Amargor: bajo <br> ABV: 6% </span>
+                <p class="card-text card-text-detalles">Color : dorada intensa <br>Amargor : bajo <br> ABV : 6% </p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!------Irish red----->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">IRISH RED</h2>
               </div>
-              <img class="cover cover-small" src="./img/irish_red.jpg" alt="imagen de un una botella y copa de Cerveza Irish Red de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-irish"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza de origen Irlandés, fácil de tomar con sabores sutiles, ligeramente maltosa con un suave dulzor inicial, leve final seco y tostado. El aroma y sabor a lúpulo no están presente.</p>
-                <span class="badge bg-secondary">Color: ambar profundo <br> (rojizo) <br>Amargor: bajo <br> ABV: 4,1%</span>
+                <p class="card-text card-text-detalles">Color : ambar profundo <br>Amargor : bajo <br> ABV : 4,1%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!----New England IPA------>
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">NEW ENGLAND IPA</h2>
               </div>
-              <img class="cover cover-small" src="./img/new_england_ipa.jpg" alt="imagen de un unas botellas y copa de Cerveza New England IPA de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-new-england"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza fácil de tomar, con gran aroma a lúpulo pero de bajo amargor, de sabores a frutas tropicales y críticas. Con mucho cuerpo y un aspecto turbio.</p>
-                <span class="badge bg-secondary">Color: dorado <br>Amargor: bajo <br> ABV: 5%</span>
+                <p class="card-text card-text-detalles">Color : dorado <br>Amargor : bajo <br> ABV : 5%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!---Golden Wheat---->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">GOLDEN WHEAT</h2>
               </div>
-              <img class="cover cover-small" src="./img/golden_wheat.jpg" alt="imagen de un unas botellas y copa de Cerveza Golden Wheat de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-golden-wheat"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza refrescante ideal para cualquier momento, presenta un perfecto balance entre el dulzor de la malta y el amargor del lúpulo, de aromas limpios y sin sabores agresivos.</p>
-                <span class="badge bg-secondary">Color: dorado <br>Amargor: bajo <br> ABV: 4,5%</span>
+                <p class="card-text card-text-detalles">Color : dorado <br>Amargor : bajo <br> ABV : 4,5%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!---Oatmeal Stout--->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">OATMEAL STOUT</h2>
               </div>
-              <img class="cover cover-small" src="./img/oatmeal_stout.jpg" alt="imagen de un unas botellas y copa de Cerveza Oatmeal Stout de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-oatmeal-stout"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza de origen Irlandés, de sabor y aroma tostado que recuerda al café.</p>
-                <span class="badge bg-secondary">Color: negro <br>Amargor: medio <br> ABV: 6%</span>
+                <p class="card-text card-text-detalles">Color : negro <br>Amargor : medio <br> ABV : 6%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!----Summer IPA----->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">SUMMER IPA</h2>
               </div>
-              <img class="cover cover-small" src="./img/summer_ipa.jpg" alt="imagen de un unas botellas y copa de Cerveza Summer IPA de Brugge">
-              <div class="card-body">
+              <div id="imagen-de-fondo-cerveza-summer-ipa"></div>
+              <div class="card-body card-body-text">
                 <p class="card-text">Cerveza lupulada, súper refrescante, de bajo cuerpo y de alta tomabilidad, con un 40% menos de calorías, ideal para el verano.</p>
-                <span class="badge bg-secondary">Color: dorado pálido <br>Amargor: medio <br> ABV: 3,8%</span>
+                <p class="card-text card-text-detalles"> Color : dorado pálido <br>Amargor: medio <br> ABV : 3,8%</p>
               </div>
             </article>
           </section>
-
-          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
+          <!----Old Ale------->
+          <section class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5">
             <article class="card">
               <div class="card-body">
                 <h2 class="card-title">OLD ALE</h2>
               </div>
-              <img class="cover cover-small" src="./img/old_ale.jpg" alt="imagen de un unas botellas y copa de Cerveza Old Ale de Brugge">
-              <div class="card-body">
-                <p class="card-text">Cerveza de alta complejidad de maltas caramelo, en aroma presenta una combinación de frutos secos como nuez, caramelo y melaza. Tiene un agregado de chips de roble macerados en Jim Bean.</p>
-                <span class="badge bg-secondary">Color: ambar oscuro <br>Amargor: bajo <br> ABV: 8%</span>
+              <div id="imagen-de-fondo-cerveza-old-ale"></div>
+              <div class="card-body card-body-text">
+                <p class="card-text">Cerveza de alta complejidad de maltas caramelo, en aroma presenta una combinación de frutos secos (nuez, caramelo y melaza). Tiene un agregado de chips de roble macerados en Jim Bean.</p>
+                <p class="card-text card-text-detalles">Color : ambar oscuro <br>Amargor : bajo <br> ABV : 8%</p>
               </div>
             </article>
           </section>
@@ -197,9 +197,10 @@
     </section>
     <!----------Legal------------>
     <section class="legal">
-      <p class="texto-footer"> &#169 Maria Eugenia Costa - Programá Desde Tu Casa</p>
+      <p class="texto-footer">  &#169 2021 Todos los derechos reservados </p>
     </section>
   </footer>
   
 </body>
+</html>
 </html>
